big update: refactored project packages, moved to layer architecture
