# new-version/docs/swagger.json
@@ -69,7 +69,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/bookcategory.BookCatRequest"
+                            "$ref": "#/definitions/bookcategory.Request"
                         }
                     }
                 ],
@@ -267,11 +267,11 @@
                 "parameters": [
                     {
                         "description": "CatRequest",
-                        "name": "inpur",
+                        "name": "input",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/bookcategory.BookCatRequest"
+                            "$ref": "#/definitions/bookcategory.Request"
                         }
                     },
                     {
@@ -331,7 +331,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/user.UserLogin"
+                            "$ref": "#/definitions/user.Request"
                         }
                     }
                 ],
@@ -423,7 +423,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/user.UserCreate"
+                            "$ref": "#/definitions/user.Request"
                         }
                     }
                 ],
@@ -457,7 +457,7 @@
         }
     },
     "definitions": {
-        "bookcategory.BookCatRequest": {
+        "bookcategory.Request": {
             "type": "object",
             "properties": {
                 "title": {
@@ -477,24 +477,13 @@
                 }
             }
         },
-        "user.UserCreate": {
+        "user.Request": {
             "type": "object",
             "properties": {
                 "email": {
                     "type": "string"
                 },
-                "pass": {
-                    "type": "string"
-                }
-            }
-        },
-        "user.UserLogin": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "pass": {
+                "pass_hash": {
                     "type": "string"
                 }
             }
